--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>
-   <title>Qsis-demo</title>
+   <title>QsisB纯文本博客演示程序-demo</title>
       <meta name="theme-color" content="#ffe18f">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="description" centent="QsisB-快速高效的纯文本记录博客程序,程序本体没有任何Jquery,让服务器轻松减重,甚至一个机顶盒，都可以用来记录你的一生">
@@ -10,6 +10,6 @@
 
 <script>
 var current_url = window.location.href;
-target_url = current_url.replace("https://demo.qsis.cn/","https://QsisB-demo.qsis.cn:88");
+target_url = current_url.replace("https://demo.qsis.cn/","https://qsisb-demo.qsis.cn:88");
 window.location = target_url;
 </script></head><body></body></html>
